# file      : Makefile.am
# copyright : Copyright (c) 2009-2013 Code Synthesis Tools CC
# license   : MIT; see accompanying LICENSE file

SUBDIRS = cutl
dist_doc_DATA = LICENSE NEWS README INSTALL version
EXTRA_DIST = libcutl-vc9.sln libcutl-vc10.sln bootstrap
ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA= libcutl.pc
